--- a/frontend/src/components/DisplayPuppies.css
+++ b/frontend/src/components/DisplayPuppies.css
@@ -1,13 +1,17 @@
 .puppy-display {
-    height: 100vh;
+    background-image: url('https://media.istockphoto.com/id/490747664/photo/gray-doggy-tile-pattern-repeat-background.jpg?b=1&s=170667a&w=0&k=20&c=H6SZuhK9oigNGww8qa60fSHoODDpiPQe-916-Pc7FeE=');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 200vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    margin-top: 1rem;
+    margin-bottom: 5rem;
 }
 
 .input {
+    margin-top: 5rem;
     justify-self: center;
     align-self: center;
     border: 0;
@@ -18,19 +22,32 @@
     height: 30px;
     width: 40%;
     text-align: center;
+    margin-bottom: 2.5rem;
+    background: transparent;
 }
 
 .puppy-section {
-    border: 1px solid red;
-    display: flex;
-    gap: 5%;
+    height: 2rem;
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr 1fr ;
+    grid-template-rows: 1fr 1fr;
+    justify-content: end;
+    row-gap: 1rem;
+    column-gap: 1%;
+    margin-left: 2rem;
 }
 
 .puppy-card {
-    border: 1px solid black;
+    background-color: wheat;
     display: grid;
     grid-template-rows: 60% 10% 10% 10% 10%;
-    width: 20%;
+    width: 15rem;
+    height: 20rem;
+    box-shadow: 0 0 15px 4px grey;
+    margin: 1rem;
+    border-radius: 25px;
+    overflow: hidden;
+
 }
 
 .puppy-image {
